<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editTextNama"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:inputType="text"
        android:hint="@string/hint_nama"
        android:ems="10" >
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editTextMerk"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:inputType="text"
        android:hint="@string/hint_merk"
        android:ems="10" >
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editTextHarga"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:inputType="number"
        android:hint="@string/hint_harga"
        android:ems="10" >
        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/buttonTambah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tombol_tambah" />

</LinearLayout>