<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <TextView
        android:id="@+id/textViewIdBarang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/judul_ubah_data"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="#0000ff" />

    <EditText
        android:id="@+id/editTextNama"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="15dp"
        android:background="#afffffff"
        android:layout_below="@id/textViewIdBarang" >
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editTextMerk"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="15dp"
        android:background="#afffffff"
        android:layout_below="@id/editTextNama" >
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editTextHarga"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:layout_marginTop="15dp"
        android:background="#afffffff"
        android:layout_below="@id/editTextMerk" >
        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_below="@id/editTextHarga" >

        <Button
            android:id="@+id/buttonUbah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tombol_ubah" />

        <Button
            android:id="@+id/buttonBatal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tombol_batal" />

    </LinearLayout>

</RelativeLayout>